--- a/Projects/pages/Doctor Profile/index.html
+++ b/Projects/pages/Doctor Profile/index.html
@@ -31,13 +31,13 @@
           <summary class="cursor-pointer">Mening bemorlarim</summary>
           <div class="flex flex-col gap-1 pl-7 mt-5">
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
-              >Kassalik tarixlari</a
+              >Kasallik tarixlari</a
             >
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
-              >Ruhiy kasalliklar dispansiyasi</a
+              >Ruhiy kasalliklar dispanseri</a
             >
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
-              >Narkalogik dispanser</a
+              >Narkologik dispanser</a
             >
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
               >Davolanganligi haqidagi ma'lumotnoma</a
@@ -55,7 +55,7 @@
           class="bars duration-300 absolute left-5 top-[10px] cursor-pointer hover:bg-gray-400 w-[40px] h-[40px] flex justify-center items-center"
           id="btn"
           data-btn="2"
-        >
+        > 
           <i class="fas fa-bars"></i>
         </div>
         <div class="content">
@@ -74,7 +74,7 @@
           </div>
           <ol class="text-2xl text-white flex flex-col gap-6 mt-6">
             <li>
-              <a href="../Security Doctor Profile/index.html">Kamilov Ali</a>
+              <a href="../Security Doctor Profile/index.html">Komilov Ali</a>
             </li>
             <li>
               <a href="#">Roziyev Qobil</a>
