--- a/Projects/pages/Patient Profile/index.html
+++ b/Projects/pages/Patient Profile/index.html
@@ -31,13 +31,13 @@
           <summary class="cursor-pointer">Tibbiy ma'lumotlar</summary>
           <div class="flex flex-col gap-1 pl-7 mt-5">
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
-              >Kassalik tarixlari</a
+              >Kasalliklar tarixi</a
             >
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
-              >Ruhiy kasalliklar dispansiyasi</a
+              >Ruhiy kasalliklar dispanseri</a
             >
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
-              >Narkalogik dispanser</a
+              >Narkologik dispanser</a
             >
             <a class="duration-300 hover:bg-gray-600 py-2" href="#"
               >Davolanganligi haqidagi ma'lumotnoma</a
